--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .d-flex{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 body{
@@ -13,7 +14,7 @@ img{
 
 h1{
     font-family: 'Josefin Sans', sans-serif;
-    margin-left: -1.2rem;
+    margin-left: -1rem;
     font-size: 3rem;
     color: #41b883;
 }
@@ -23,4 +24,26 @@ P{
     font-family: 'Inconsolata', monospace;
     font-size: 1.5rem;
     color: whitesmoke;
+}
+
+button{
+    padding: 1rem 2rem;
+    font-size: 1.5rem;
+    font-family: 'Inconsolata', monospace;
+    font-weight: bold;
+    border: 2px solid black;
+    background-color: red;
+    color: white;
+    margin: 1rem;
+
+}
+
+span.effect{
+    background-color: lime;
+    text-align: center;
+    border: 3.5px solid black;
+    width: 70px;
+    height: 50px;
+    font-size: 3rem;
+    font-family: 'Inconsolata', monospace;
 }
